--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,20 @@ header {
     margin-top: 0;
 }
 
+/* css trick for absolute component */
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
 /* ==== Cards ==== */
 
 .card {
@@ -66,6 +80,10 @@ header {
 .card h3 {
     font-weight: normal;
     font-size: 1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .card p {
