--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 93.75%; /* 15px */
+}
+
 body {
     background: #f0f2f5;
     font-family: 'Poppins', sans-serif;
@@ -29,6 +33,24 @@ h2 {
 
     font-weight: normal;
 }
+
+/* ==== Links & Buttons ====*/
+
+.button{
+    color: #49aa26;
+    text-decoration-line: none;
+    opacity: 0.9;
+}
+
+.button:hover {
+    opacity: 0.6;
+}
+
+.button.new {
+    display: inline-block;
+    margin-bottom: .8rem;
+}
+
 /* ==== Header ====*/
 header {
     background: #2d4a22;
@@ -105,11 +127,18 @@ header {
     width: 100%;
     border-spacing: 0 0.5rem;
     color: #969CB3;
+
+    overflow-x: auto;
 }
 
 table thead tr th:first-child,
 table tbody tr td:first-child {
     border-radius: 0.25rem 0 0 0.25rem;
+}
+
+table thead tr th:last-child,
+table tbody tr td:last-child {
+    border-radius: 0 0.25rem 0.25rem 0;
 }
 
 table th {
@@ -156,4 +185,18 @@ footer {
 
     color: var(--DarkBlue);
     opacity: 0.6;
+}
+
+/* === Responsivo === */
+
+@media(min-width: 800px) {
+    html {
+        font-size: 87.5%;
+    }
+
+    #balance {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
